# learnOpenGL

./: CMakeLists.txt
include/glad/: glad.h
src/: glad.c  helloWindow.cpp
